--- a/src/components/Spectrum/PageFrame.astro
+++ b/src/components/Spectrum/PageFrame.astro
@@ -13,12 +13,22 @@ import "node_modules/@spectrum-css/icon/dist/index.css";
 
 ---
 
+<script>
+    import '@spectrum-web-components/theme/sp-theme.js';
+    import '@spectrum-web-components/theme/src/themes.js';
+    
+</script>
     <div class="spectrum spectrum--medium ">
-        <Default class=".header" {...Astro.props}>
-            <slot name="header" slot="header"/>
-            <slot name="sidebar" slot="sidebar"/>
-            <slot />
-        </Default>
+        <sp-theme
+            theme="spectrum"
+            scale="medium"
+        >
+            <Default class=".header" {...Astro.props}>
+                <slot name="header" slot="header"/>
+                <slot name="sidebar" slot="sidebar"/>
+                <slot />
+            </Default>
+        </sp-theme>
     </div>
 
 
