adjust the attack and toughness to differ from EvAns and each other, accepting his modifiers for now, and including March Size in Attack.

--- a/src/components/general/pairing/gridDisplay.astro
+++ b/src/components/general/pairing/gridDisplay.astro
@@ -677,7 +677,7 @@ let pairArray = [...pairs].sort(sortPairFunction);
                 class="spectrum-Button spectrum-Button--outline spectrum-Button--primary spectrum-Button--sizeM"
               >
                 <span class="spectrum-Table-columnTitle"
-                  >TKRTips Defense Score</span
+                  >TKRTips Toughness Score</span
                 >
               </button>
             </div>
