--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -13,16 +13,50 @@ import { DisplayGrid} from './display-grid';
 
 import {
   AscendingLevels,
-  GeneralElement,
-  type GeneralElementType,
-  ClassEnum,
-  qualityColor,
+  type BuffType,
   type BuffParamsType,
-type ClassEnumType,
-type ExtendedGeneralType,
-ExtendedGeneralStatus,
-type GeneralPairType,
-} from "@schemas/index";
+  ClassEnum,
+  type ClassEnumType,
+  Condition,
+  type levelsType,
+  qualityColor,
+  type qualityColorType,
+  syslogSeverity,
+} from "@schemas/baseSchemas";
+
+import {
+  ConflictArray, 
+  ConflictDatum,   
+  type bookConflictsType,
+  type ConflictDatumType,
+ } from '@schemas/conflictSchemas'
+
+ import {
+  Note,
+  Display,
+  type NoteType,
+  GeneralArray,
+  type GeneralClassType,
+  GeneralElement,
+  type GeneralArrayType,
+  type GeneralElementType,
+  generalSpecialists,
+  type generalUseCaseType,
+ } from '@schemas/generalsSchema'
+
+ import { 
+  type ExtendedGeneralType,
+  ExtendedGeneralStatus,
+  type GeneralPairType,
+  } from "@schemas/ExtendedGeneral";
+
+import { 
+  type BookType,
+  specialSkillBook,
+  standardSkillBook,
+  type specialSkillBookType,
+  type standardSkillBookType,
+ } from "@schemas/bookSchemas";
 
 const DEBUG = false;
 
