linter did alot this time, plus a routine astro update

--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -243,7 +243,7 @@ if (dataV.success) {
           if(r === undefined || !Array.isArray(r.books)) {
             return accumulator
           } else {
-            const ConflictingBooks: Array<standardSkillBookType> = r.books;
+            const ConflictingBooks: standardSkillBookType[] = r.books;
             let condition = "all the time.";
             let warning = false;
             if(!Array.isArray(ConflictingBooks) || ConflictingBooks.length === 0) {
