see if this changes the behavior when deployed

--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -170,14 +170,14 @@ if (generalObjects !== null && generalObjects !== undefined) {
 ---
 
 <div class="table-container">
-  <DisplayGrid
+  <!-- <DisplayGrid
     tableName={table_name}
     InvestmentLevel={MyInvestmentLevel}
     DisplayPairs={Astro.locals.CachedPairs}
     client:only="lit"
   >
 
-  </DisplayGrid>
+  </DisplayGrid> -->
   
 <style>
   .table-container {
