--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -4,6 +4,7 @@ export const prerender = false;
 import { getCollection, type CollectionEntry, } from "astro:content";
 import type { ComponentProps } from "astro/types";
 
+import {GridGeneral} from './GridGeneral'
 
 import {delay} from 'nanodelay';
 
